# onsendo

./: .env.example  .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  Makefile  README.md  UNIFIED_ACTIVITY_SYSTEM.md  links.txt  pyproject.toml  pytest.ini  run.sh
artifacts/db/: onsen_db_no_visits_no_locations.db  onsen_empty.db  onsen_latest.db  onsen_no_visits_no_locations.db  onsen_with_locations.db
artifacts/foot-bath-path/: all_onsens_map_foot_baths.html  foot_baths_beppu.md
artifacts/locations/: locations.json
data/heart_rate/: .gitignore  README.md
docs/: MAKEFILE_GUIDE.md  STRAVA_INDEX.md  STRAVA_PHASE1_COMPLETE.md  STRAVA_PHASE2_COMPLETE.md  STRAVA_QUICK_START.md  STRAVA_README.md  STRAVA_TROUBLESHOOTING.md  STRAVA_WORKFLOWS.md  analysis_system.md  artifact_generation.md  database_environments.md  db-env-completion-summary.md  db-env-implementation-complete.md  db-env-implementation-status.md  heart_rate_system.md  mock_data_architecture.md  onsen_data_scraper.md  recommendation_performance.md  strava_implementation_commands.md  strava_implementation_examples.md  strava_integration_spec.md  strava_phase3_complete.md  strava_phase4_complete.md  strava_phase5_complete.md  strava_phase6_complete.md
examples/: README.md  apple_health_sample.csv  mixed_scenario_apple_health.csv  mock_sleep_apple_health.csv  mock_workout_apple_health.csv  resting_session.csv  sleep_session.json  workout_apple_health.csv
examples/exercise/: README.md  example_route.gpx  example_run.json  example_workout.csv
examples/heart_rate/: .gitignore  README.md  daily_sessions.txt  demo_mock_heart_rate.py  heart_rate_sample.csv  mixed_scenario_apple_health.csv  resting_session.csv  sleep_session.json  workout_apple_health.csv
migrations/: env.py
migrations/versions/: 0eec56bb8a7c_create_activity_table_and_archive_old_.py  3b6ec50e10ad_remove_time_of_day_from_visit_table.py  (+13 more)
rules/: onsendo-rules-v1.md  onsendo-rules.md  rule-review.md
scripts/: backup_to_drive.py  batch_update_remaining_commands.py  fix_broken_imports.py  fix_remaining_imports.py  fix_typing_imports.py  get_shirt_text.py  heart_rate_batch_import.sh  heart_rate_import.sh  heart_rate_maintenance.sh  heart_rate_manager.sh  init_db.py  mergeAndPush.sh  merge_and_push.sh  migrate_onsen_monitoring_type.py  mock.sh  setup_heart_rate_dirs.sh  shellUtils.sh  shell_helpers.sh  update_commands_for_env_system.py
src/: __init__.py  cli.py  config.py  const.py  paths.py
tests/: conftest.py
(+236 files in other folders)
