[tool.poetry]
name = "onsendo"
version = "0.1.0"
description = "大なる温泉の道"
authors = ["PetrCala <cala.p@seznam.cz>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src", from = "." }]


[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
matplotlib = "^3.10.1"
sqlalchemy = "^2.0.39"
sqlalchemy-utils = "^0.41.2"
pillow = "^11.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pylint = "^3.3.5"
coverage = "^7.6.12"

[tool.poetry.scripts]
onsendo = "src.cli.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
