[tool.poetry]
name = "onsendo"
version = "0.1.0"
description = "大なる温泉の道"
authors = ["PetrCala <cala.p@seznam.cz>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src", from = "." }]


[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
matplotlib = "^3.10.1"
sqlalchemy = "^2.0.39"
sqlalchemy-utils = "^0.41.2"
pillow = "^11.3.0"
selenium = "^4.20.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
scipy = "^1.13.0"
plotly = "^5.18.0"
folium = "^0.15.0"
scikit-learn = "^1.4.0"
seaborn = "^0.13.0"
statsmodels = "^0.14.0"
kaleido = "0.2.1"
jupyter = "^1.0.0"
ipywidgets = "^8.1.0"
jinja2 = "^3.1.0"
markdown = "^3.5.0"
weasyprint = "^61.0.0"
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"
google-api-python-client = "^2.100.0"
python-dotenv = "^1.0.0"
alembic = "^1.13.0"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pylint = "^3.3.5"
coverage = "^7.6.12"
faker = "^37.5.3"

[tool.poetry.scripts]
onsendo = "src.cli.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
